src/objects/Pilot_Activity__c.object
<CustomObject>
    <fields>
        <fullName>AccountContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account contact to enable related list on Sales Support Activity</description>
        <label>Account Contact</label>
        <referenceTo>AccountContact__c</referenceTo>
        <relationshipName>Sales_Support_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Material_Required__c</fullName>
        <description>additional material needed, questions that require input from other Pearson people (marketing).</description>
        <label>Additional Material Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_require__c</fullName>
        <description>Assistance that the professor may need as part of the training, FDOC or pilot</description>
        <label>Professor Assistance/Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The following field identifies the contact that is related to the following pilot activity.</description>
        <inlineHelpText>Identify the contact associated to the account with which the Opportunity is related to that serves as the primary contact for the following pilot record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pilot Activities</relationshipLabel>
        <relationshipName>Pilot_Activities_contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The following field identifies the contact who is associated to the following pilot activity</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pilot Activities</relationshipLabel>
        <relationshipName>Pilot_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of a pilot or training</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Name of person involved in Pilot, FDOC, Training</description>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_for_Nomination__c</fullName>
        <description>Goals for nominating the faculty advisor</description>
        <label>Goals for Nomination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LMS__c</fullName>
        <description>LMS used by faculty advisor being nominated</description>
        <label>LMS</label>
        <picklist>
            <picklistValues>
                <fullName>My Labs Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LTS for training, FDOC, pilot, faculty nomination</description>
        <label>LTS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Support_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of person involved in FDOC, Training, Pilot or Faculty Nomination</description>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <description>Number of participants who will be part of the FDOC, training or pilot</description>
        <label>Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>Number of students who will be part of the pilot</description>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to opportunity to enable related list on sales support activity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sales_Support_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcomes__c</fullName>
        <description>Outcome of the training, pilot, FDOC</description>
        <label>Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pilot_Detail__c</fullName>
        <description>Details of pilot</description>
        <label>Pilot Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pilot_Details__c</fullName>
        <description>Details of pilot</description>
        <label>Pilot Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Issues_Feedback__c</fullName>
        <description>Feedback on the product used in the FDOC, training or pilot</description>
        <label>Product Issues/Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product relating to the pilot, training or FDOC</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_Support_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questions_for_Marketing__c</fullName>
        <description>Questions for marketing based on feedback from the FDOC, training or pilot</description>
        <label>Questions for Marketing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RM_last_name__c</fullName>
        <description>Regional manager last name</description>
        <label>RM (last name)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Info__c</fullName>
        <description>Information relevant to the faculty nomination, FDOC, pilot or training</description>
        <label>Relevant Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rep who is involved in FDOC, pilot, training, faculty nomination</description>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Support_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of FDOC, pilot, training, faculty nomination</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Textboooks_Editions_Related__c</fullName>
        <description>Text books/editions related to faculty being nominated</description>
        <label>Textboooks/Editions Related</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of faculty being nominated</description>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <description>This field allows the user to identify where the training will take place</description>
        <inlineHelpText>Please identify the location where this training is planned to take place (Street Address, Suite/Building/Room, City, State, Country, Zip Code; Virtual)</inlineHelpText>
        <label>Training Location</label>
        <type>TextArea</type>
    </fields>
    <label>Pilot Activity</label>
    <nameField>
        <displayFormat>PIL - {0000}</displayFormat>
        <label>Pilot Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilot Activities</pluralLabel>
    <recordTypes>
        <fullName>Faculty_Advisor_Nomination</fullName>
        <active>true</active>
        <label>Faculty Advisor Nomination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pilot</fullName>
        <active>true</active>
        <label>Pilot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>